force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>PMA Activity</label>
    <nameField>
        <displayFormat>Activity-{0}</displayFormat>
        <label>Activity#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMA Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>