force-app/main/default/objects/Activity__c/fields/ActionId__c.field-meta.xml
<CustomField>
    <fullName>ActionId__c</fullName>
    <label>ActionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>