force-app/main/default/objects/Activity__c/fields/Activity_No__c.field-meta.xml
<CustomField>
    <fullName>Activity_No__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Activity No</label>
    <type>AutoNumber</type>
</CustomField>