force-app/main/default/objects/Activity__c/fields/Activity_Number__c.field-meta.xml
<CustomField>
    <fullName>Activity_Number__c</fullName>
    <formula>VALUE(Activity_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>