force-app/main/default/objects/Activity__c/fields/ActivityTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityTime__c</fullName>
    <formula>TIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActivityTime</label>
    <type>Time</type>
</CustomField>