force-app/main/default/objects/Activity__c/fields/BCC_Address__c.field-meta.xml
<CustomField>
    <fullName>BCC_Address__c</fullName>
    <label>BCC Address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>