force-app/main/default/objects/Activity__c/fields/Calculate_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Rollup</label>
    <type>Checkbox</type>
</CustomField>