force-app/main/default/objects/Activity__c/fields/Caller_Id__c.field-meta.xml
<CustomField>
    <fullName>Caller_Id__c</fullName>
    <label>Caller Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>