force-app/main/default/objects/Activity__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <label>CC Address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>