force-app/main/default/objects/Activity__c/fields/Contact_Point__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point</label>
    <referenceTo>Contact_Point__c</referenceTo>
    <relationshipLabel>PMA Activities</relationshipLabel>
    <relationshipName>PMA_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>