force-app/main/default/objects/Activity__c/fields/External_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Number__c</fullName>
    <inlineHelpText>Outbound - From Plivo Number
Inbound - To Plivo Number</inlineHelpText>
    <label>External Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>