force-app/main/default/objects/Activity__c/fields/Formatted_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Phone__c</fullName>
    <label>Formatted Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>