force-app/main/default/objects/Activity__c/fields/FromNumber__c.field-meta.xml
<CustomField>
    <fullName>FromNumber__c</fullName>
    <inlineHelpText>Inbound - From Number</inlineHelpText>
    <label>FromNumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>