force-app/main/default/objects/Activity__c/fields/G_Gmail_id__c.field-meta.xml
<CustomField>
    <fullName>G_Gmail_id__c</fullName>
    <externalId>true</externalId>
    <label>G_Gmail_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>