force-app/main/default/objects/Activity__c/fields/Hide_Record__c.field-meta.xml
<CustomField>
    <fullName>Hide_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Record</label>
    <type>Checkbox</type>
</CustomField>