force-app/main/default/objects/Activity__c/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <label>HTML Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>