force-app/main/default/objects/Activity__c/fields/Is_Forwarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Forwarded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SMS is Forwarded Internally</inlineHelpText>
    <label>Is Forwarded</label>
    <type>Checkbox</type>
</CustomField>