force-app/main/default/objects/Activity__c/fields/IsBulkMessage__c.field-meta.xml
<CustomField>
    <fullName>IsBulkMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBulkMessage</label>
    <type>Checkbox</type>
</CustomField>