force-app/main/default/objects/Activity__c/fields/IsInboxMessage__c.field-meta.xml
<CustomField>
    <fullName>IsInboxMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInboxMessage</label>
    <type>Checkbox</type>
</CustomField>