force-app/main/default/objects/Activity__c/fields/IsUnread__c.field-meta.xml
<CustomField>
    <fullName>IsUnread__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsUnread</label>
    <type>Checkbox</type>
</CustomField>