force-app/main/default/objects/Activity__c/fields/Media_Count__c.field-meta.xml
<CustomField>
    <fullName>Media_Count__c</fullName>
    <label>Media Count</label>
    <summaryFilterItems>
        <field>Media_URL__c.Media_Url__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Media_URL__c.Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>