force-app/main/default/objects/Activity__c/fields/media_url__c.field-meta.xml
<CustomField>
    <fullName>media_url__c</fullName>
    <label>Media URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>