force-app/main/default/objects/Activity__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(Contact__c)),
IF( NOT(ISBLANK(Contact__r.FirstName)), Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName , Contact__r.LastName),
 Formatted_Phone__c 
)</formula>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>