force-app/main/default/objects/Activity__c/fields/Message_Intent__c.field-meta.xml
<CustomField>
    <fullName>Message_Intent__c</fullName>
    <label>Message Intent</label>
    <length>155</length>
    <type>Text</type>
</CustomField>