force-app/main/default/objects/Activity__c/fields/Message_Time__c.field-meta.xml
<CustomField>
    <fullName>Message_Time__c</fullName>
    <formula>TIMENOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Time</label>
    <type>Time</type>
</CustomField>