force-app/main/default/objects/Activity__c/fields/Recording_Duration__c.field-meta.xml
<CustomField>
    <fullName>Recording_Duration__c</fullName>
    <label>Recording Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>