force-app/main/default/objects/Activity__c/fields/Recording_Duration_Milli_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Recording_Duration_Milli_Seconds__c</fullName>
    <label>Recording Duration Milli Seconds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>