force-app/main/default/objects/Activity__c/fields/Recording_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Recording_End_Time__c</fullName>
    <label>Recording End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>