force-app/main/default/objects/Activity__c/fields/Recording_Id__c.field-meta.xml
<CustomField>
    <fullName>Recording_Id__c</fullName>
    <externalId>true</externalId>
    <label>Recording Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>