force-app/main/default/objects/Activity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Undelivered</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>ringing</fullName>
                <label>Ringing</label>
            </value>
            <value>
                <fullName>hangup</fullName>
                <label>Hangup</label>
            </value>
            <value>
                <fullName>connected</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>answer</fullName>
                <label>Answered</label>
            </value>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>no-answer</fullName>
                <label>Not Answered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>