force-app/main/default/objects/Activity__c/fields/Thread_id__c.field-meta.xml
<CustomField>
    <fullName>Thread_id__c</fullName>
    <label>Thread id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>