force-app/main/default/objects/Activity__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>