force-app/main/default/objects/Activity__c/fields/WhatId_ObjectApi_Name__c.field-meta.xml
<CustomField>
    <fullName>WhatId_ObjectApi_Name__c</fullName>
    <label>WhatId ObjectApi Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>