force-app/main/default/objects/Activity__c/listViews/All_Invalid_SMS_Activities.listView-meta.xml
<ListView>
    <fullName>All_Invalid_SMS_Activities</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Direction__c</columns>
    <columns>Customer__c</columns>
    <columns>Phone__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>When__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phone__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Invalid SMS Activities</label>
</ListView>