force-app/main/default/objects/Activity__c/listViews/All_MMS_Activities.listView-meta.xml
<ListView>
    <fullName>All_MMS_Activities</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Direction__c</columns>
    <columns>Phone__c</columns>
    <columns>External_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>mms</value>
    </filters>
    <label>All MMS Activities</label>
</ListView>