force-app/main/default/objects/Activity__c/listViews/All_Opted_Out_Activities.listView-meta.xml
<ListView>
    <fullName>All_Opted_Out_Activities</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Direction__c</columns>
    <columns>Phone__c</columns>
    <columns>External_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>When__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Message_Intent__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Message_Intent__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Opted Out Activities</label>
</ListView>