force-app/main/default/objects/Activity__c/listViews/All_SMS_Activities.listView-meta.xml
<ListView>
    <fullName>All_SMS_Activities</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Direction__c</columns>
    <columns>Phone__c</columns>
    <columns>External_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>When__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>sms,mms</value>
    </filters>
    <label>All SMS Activities</label>
</ListView>